Finished bounded deviation paths

--- a/references.bib
+++ b/references.bib
@@ -2,7 +2,70 @@
   author = {Peter Corke},
   title = {Robot Academy: Summary of paths and trajectories},
   year = {2025},
-  url = {https://robotacademy.net.au/lesson/summary-of-paths-and-trajectories/},
+  url = {http://robotacademy.net.au/masterclass/paths-and-trajectories/?lesson=107},
   note = {Accessed: 2025-02-18}
 }
 
+@misc{point_to_point,
+  author = {Islam S. M. Khalil},
+  title = {Trajectory for Point to Point Motion},
+  year = {2025},
+  url = {https://eii.cv.uma.es/pluginfile.php/751768/mod_folder/content/0/Trajectory_Planning_Islam_Khalil.pdf?forcedownload=1},
+  note = {Accessed: 2025-03-02}
+}
+
+@misc{joint_trajectory_planning,
+  author = {Alessandro De Luca},
+  title = {Trajectory planning},
+  year = {2025},
+  url = {https://eii.cv.uma.es/pluginfile.php/751768/mod_folder/content/0/Trajectory_Planning_Alessandro_de_Luca.pdf?forcedownload=1},
+  note = {Accessed: 2025-03-02}
+}
+
+@misc{cartesian_trajectory_planning,
+  author = {Alessandro De Luca},
+  title = {Trajectory planning in Cartesian space},
+  year = {2025},
+  url = {https://eii.cv.uma.es/pluginfile.php/751768/mod_folder/content/0/Trajectory_Planning_Cartesian_Space_Alessandro_de_Luca.pdf?forcedownload=1},
+  note = {Accessed: 2025-03-02}
+}
+
+@article{taylor1979planning,
+  title={Planning and execution of straight line manipulator trajectories},
+  author={Taylor, Russell H},
+  journal={IBM Journal of Research and Development},
+  volume={23},
+  number={4},
+  pages={424--436},
+  year={1979},
+  publisher={IBM},
+  url = {https://eii.cv.uma.es/pluginfile.php/751768/mod_folder/content/0/Straight%20Line%20Manipulator%20Trajectories.pdf?forcedownload=1}
+}
+
+@article{paul1979manipulator,
+  title={Manipulator Cartesian path control},
+  author={Paul, Richard},
+  journal={IEEE Transactions on systems, man, and cybernetics},
+  volume={9},
+  number={11},
+  pages={702--711},
+  year={1979},
+  publisher={IEEE},
+  url = {https://eii.cv.uma.es/pluginfile.php/751768/mod_folder/content/0/Manipulator_Cartesian_Path_Control.pdf?forcedownload=1}
+}
+
+@inproceedings{hollerbach1983dynamic,
+  title={Dynamic scaling of manipulator trajectories},
+  author={Hollerbach, John M},
+  booktitle={1983 American Control Conference},
+  pages={752--756},
+  year={1983},
+  organization={IEEE},
+  url={https://eii.cv.uma.es/pluginfile.php/751768/mod_folder/content/0/Dynamic_Scaling_of_Manipulator_Trajectories.pdf?forcedownload=1}
+}
+
+@article{vukobratovic1982method,
+  title={A method for optimal synthesis of manipulation robot trajectories},
+  author={Vukobratovi{\'c}, M and Kir{\'c}anski, M},
+  year={1982}
+}
