Changed structure of the trajectory planning slides

--- a/references.bib
+++ b/references.bib
@@ -69,3 +69,15 @@
   author={Vukobratovi{\'c}, M and Kir{\'c}anski, M},
   year={1982}
 }
+
+@article{tagliavini2023smooth,
+  title={A smooth orientation planner for trajectories in the cartesian space},
+  author={Tagliavini, Andrea and Bianco, Corrado Guarino Lo},
+  journal={IEEE Robotics and Automation Letters},
+  volume={8},
+  number={5},
+  pages={2606--2613},
+  year={2023},
+  publisher={IEEE},
+  url={https://eii.cv.uma.es/pluginfile.php/751768/mod_folder/content/0/A_Smooth_Orientation_Planner_for_Trajectories_in_the_Cartesian_Space.pdf?forcedownload=1}
+}
