--- a/references.bib
+++ b/references.bib
@@ -81,3 +81,12 @@
   publisher={IEEE},
   url={https://eii.cv.uma.es/pluginfile.php/751768/mod_folder/content/0/A_Smooth_Orientation_Planner_for_Trajectories_in_the_Cartesian_Space.pdf?forcedownload=1}
 }
+
+@article{luh1983conventional,
+  title={Conventional controller design for industrial robots—a tutorial},
+  author={Luh, JYS},
+  journal={IEEE Transactions on Systems, Man, and Cybernetics},
+  number={3},
+  pages={298--316},
+  year={1983},
+}
