finish robot control

--- a/references.bib
+++ b/references.bib
@@ -6,6 +6,30 @@
   note = {Accessed: 2025-02-18}
 }
 
+@misc{visualizing_quaternions,
+  author = {Grant Sanderson, Ben Eater},
+  title = {Visualizing quaternionsquaternions},
+  year = {2019},
+  url = {https://eater.net/quaternions},
+  note = {Accessed: 2025-04-13}
+}
+
+@misc{3D_rotation_converter,
+  author = {Andre Gaschler},
+  title = {3D Rotation Converter},
+  year = {2019},
+  url = {https://www.andre-gaschler.com/rotationconverter/},
+  note = {Accessed: 2025-04-13}
+}
+
+@misc{rotation_calculator,
+  author = {Josh Newans},
+  title = {Articulated robotics: Rotation calculator},
+  year = {2024},
+  url = {https://articulatedrobotics.xyz/tools/rotation-calculator},
+  note = {Accessed: 2025-04-13}
+}
+
 @misc{point_to_point,
   author = {Islam S. M. Khalil},
   title = {Trajectory for Point to Point Motion},
@@ -89,4 +113,33 @@
   number={3},
   pages={298--316},
   year={1983},
+}
+
+@article{barrientos2007fundamentos,
+  title={Fundamentos de rob{\'o}tica},
+  author={Barrientos, Antonio and others},
+  year={2007},
+  publisher={Biblioteca Hern{\'a}n Malo Gonz{\'a}lez}
+}
+
+@book{sciavicco2010robotics,
+  title={Robotics: modelling, planning and control},
+  author={Siciliano, Bruno and Sciavicco, Lorenzo and Villani, Luigi and Oriolo, Giuseppe},
+  year={2010},
+  publisher={Springer}
+}
+
+@book{lynch2017modern,
+  title={Modern robotics},
+  author={Lynch, Kevin M and Park, Frank C},
+  year={2017},
+  publisher={Cambridge University Press}
+}
+
+@misc{corke_robot_joint_control,
+  author = {Peter Corke},
+  title = {Robot Academy: Robot Joint Control},
+  year = {2025},
+  url = {https://robotacademy.net.au/masterclass/robot-joint-control/?lesson=364},
+  note = {Accessed: 2025-05-13}
 }
