--- a/physical_interaction.tex
+++ b/physical_interaction.tex
@@ -157,186 +157,16 @@
 % \setbeamertemplate{itemize subitem}[square]
 
 \begin{frame}
-	\frametitle{Overview} % Table of contents slide, comment this block out to remove it
+	\frametitle{Outline} % Table of contents slide, comment this block out to remove it
 	\tableofcontents % Throughout your presentation, if you choose to use \section{} and \subsection{} commands, these will automatically be printed on this slide as an overview of your presentation
 \end{frame}
+\section{The Control Problem}
 
-\section{Introduction}
-% `[allowframebreaks]` can be used to have multiple slides in one frame, where the slides are continued with the suffix "(cont.)"; `[allowframebreaks]` can be used with `\framebreak` to manually break each frame into multiple slides
 \begin{frame}[allowframebreaks]
 \frametitle{Introduction}
-	Itemize example
-	\begin{itemize}
-		\item Item 1
-		\item Item 2
-        \begin{table}[]
-        \caption{Example of Table - Taxonomy of human intent prediction}
-        \label{tab:table_example}
-        \vspace{-.75cm}
-        \resizebox{0.95\textwidth}{!}{%
-        \begin{tabular}{|c|c|c|c|}
-        \hline
-        \multicolumn{2}{|c|}{\multirow{2}{*}{Human}} & \multicolumn{2}{c|}{\begin{tabular}[c]{@{}c@{}}Execution Strategy\\ (Action)\end{tabular}}                            \\ \cline{3-4} 
-        \multicolumn{2}{|c|}{}                       & \begin{tabular}[c]{@{}c@{}}Observer\\ Knows\end{tabular} & \begin{tabular}[c]{@{}c@{}}Observer\\ Unknown\end{tabular} \\ \hline
-        \multirow{2}{*}{\begin{tabular}[c]{@{}c@{}}Objective \\ Function\end{tabular}} &
-          \begin{tabular}[c]{@{}c@{}}Observer\\ Knows\end{tabular} &
-          \begin{tabular}[c]{@{}c@{}}All is Known (e.g. Ping Pong) \\ where both objective and actions are clear\end{tabular} &
-          \begin{tabular}[c]{@{}c@{}}Human Action Model is unclear\\  or suboptimal (e.g. chess)\end{tabular} \\ \cline{2-4} 
-         &
-          \begin{tabular}[c]{@{}c@{}}Observer\\ Unknown\end{tabular} &
-          \begin{tabular}[c]{@{}c@{}}Human action model is well known, \\ but objective is not (e.g. joy-riding in car \\ or free running, where destination\\  or direction is unclear)\end{tabular} &
-          \begin{tabular}[c]{@{}c@{}}Poor action model and objective\\  function (e.g. Poor / good cook, \\ no idea of final dish)\end{tabular} \\ \hline
-        \end{tabular}%
-        }
-        \end{table}
-
-		\item Tables can be referenced as Table  \ref{tab:table_example}
-	\end{itemize}
 	
-	\framebreak
-	
-	Example of a figure, shown in Figure \ref{fig:prob_formulation_scenario_1}.
-	
-	\begin{figure}
-        \centering
-        \includegraphics[width=0.8\textwidth]{images/prob_formulation_scenario_1.png}
-        \caption{Example Figure}
-        \label{fig:prob_formulation_scenario_1}
-    \end{figure}
 \end{frame}
 
-% This demonstrates a new section
-\section{Examples}
-% This demonstrates a single frame without framebreaks
-\begin{frame}{Example of Horizontal Subfigures}
-
-	\begin{figure}
-		\centering
-		\begin{subfigure}[t]{0.5\textwidth}
-			\centering
-			\includegraphics[width=0.9\textwidth]{images/stone2014fall_setup.png}
-			\caption{Single Kinect setup for fall prevention in elderly residence \cite{stone2014fall}}
-		\end{subfigure}%
-		~ 
-		\begin{subfigure}[t]{0.5\textwidth}
-			\centering
-			\includegraphics[width=\textwidth]{images/staranowicz2015easy_multiple_kinects.png}
-			\caption{Multiple Kinects calibration for fall prediction\cite{staranowicz2015easy}}
-		\end{subfigure}
-		\caption{Examples of Horizontal Subfigures}
-	\end{figure}
-\end{frame}
-
-\begin{frame}{Example of Horizontal Alignment}
-    % For data collection:
-    
-    Example of Horizontal Alignment of a \texttt{table} and a \texttt{figure}.
-    \begin{center}
-    \begin{minipage}[t]{.65\linewidth}
-    \begin{table}[H]
-    % \renewcommand{\arraystretch}{1.3}
-    \caption{Environment limitations on data collection}
-    \label{tab:env_limit}
-    \centering
-    % \begin{tabular}{m{1.6cm}|c|>{\centering\arraybackslash}m{2cm}|>{\centering\arraybackslash}m{2.3cm}}
-    \begin{tabular}{m{2cm}|c|c|>{\centering\arraybackslash}m{1.5cm}}
-    % \begin{tabular}{c|c|c|c}
-        & Kinect & Stereo & Kinect + Stereo\\
-        \hline
-        Indoor & \cmark & \cmark & \cmark \\
-        \hline
-        Outdoor & \xmark & \cmark & \cmark \\
-        \hline
-        High number of features & \cmark & \cmark & \cmark \\
-        \hline
-        Low number of features & \cmark & \xmark & \cmark 
-    \end{tabular}
-    \end{table}
-    \end{minipage}%
-    \begin{minipage}[t]{.35\linewidth}
-    \vspace{0pt}
-    \centering
-    \includegraphics[width=0.7\textwidth]{images/waist_cam_setup_new.png}
-    \end{minipage}
-    \end{center}
-\end{frame}
-
-\begin{frame}[allowframebreaks]
-\frametitle{Example of resizable equations}
-
-\begin{center}
-\scalebox{1.0}{\parbox{\linewidth}{%
-		\begin{align*}
-		& {\text{min \hskip 6pt}}
-		& & J = \int (a_{real} - \hat{a})^2  \\
-		& \text{subject to}
-		& & \text{human kinematics} \\
-		&&& \text{no collision} \\
-		&&& \text{no falling} 
-		\end{align*}
-}}
-\end{center}
-
-
-\begin{equation}
-\mathbf{\boldsymbol{\tau} = M(q) \ddot{q} + C(q,\dot{q}) \dot{q} + F \dot{q} + g (q)}
-\end{equation}
-
-\end{frame}
-
-\begin{frame}[allowframebreaks]
-\frametitle{Example of Regular Equations}
-    % \begin{equation}
-    %     {}^Ag = {}^AR_B {}^Bg
-    % \end{equation}
-    
-    % \begin{equation}
-    %     V = \frac{{}^Bg \cross {}^Ag}{\norm{{}^Ag}\norm{{}^Bg}}, 
-    %     \theta = \arccos{\frac{{}^Bg \cross {}^Ag}{\norm{{}^Ag}\norm{{}^Bg}}}
-    % \end{equation}
-    
-    \begin{equation}
-        \begin{split}
-        {}^AR_{B}(t_0)=\left[\begin{array}{ccc}
-        1 & 0 & 0 \\
-        0 & 1 & 0 \\
-        0 & 0 & 0
-        \end{array}\right]+
-        \sin (\theta)\left[\begin{array}{ccc}
-        0 & -v_{3} & v_{2} \\
-        v_{3} & 0 & -y_{1} \\
-        -v_{2} & v_{1} & 0
-        \end{array}\right]+ \\
-        (1-\cos (\theta))\left[\begin{array}{ccc}
-        0 & -v_{3} & v_{2} \\
-        v_{3} & 0 & -v_{1} \\
-        -v_{2} & v_{1} & 0
-        \end{array}\right]^{2}
-        \end{split}
-        \end{equation}
-        
-        \begin{align}
-            {}^AR_{B}(t) &= \Delta R {}^AR_{B}(t_0) \\
-            \Delta R &= {}^AR_{B}(t) {}^AR_{B}^T(t_0)
-        \end{align}
-\end{frame}
-
-\begin{frame}[allowframebreaks]
-\frametitle{Example of Video}
-
-	\includemedia[
-	width=\linewidth,
-	totalheight=0.6\linewidth,
-	activate=pageopen,
-	passcontext,  %show VPlayer's right-click menu
-	addresource=videos/opensim_video.mp4,
-	flashvars={
-		%important: same path as in `addresource'
-		source=videos/opensim_video.mp4
-	}
-	]{}{VPlayer.swf}
-    
-\end{frame}
 
 \begin{frame}[allowframebreaks]
 \frametitle{Bibliography}
